force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/KDCE_DropOutOfflineProgram__c.object-meta.xml
<CustomObject>
    <label>DropOut OfflineProgram</label>
    <nameField>
        <label>DropOut OfflineProgram Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DropOut OfflineProgram</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>