force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/fields/KDCE_OfflineProgramId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OfflineProgramId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KDCE_OfflineProgramId</label>
    <referenceTo>KDCE_OfflineProgram__c</referenceTo>
    <relationshipLabel>DropOut OfflineProgram</relationshipLabel>
    <relationshipName>DropOut_OfflineProgram</relationshipName>
    <type>Lookup</type>
</CustomField>