force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/fields/NewCharger__c.field-meta.xml
<CustomField>
    <fullName>NewCharger__c</fullName>
    <label>NewCharger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>