force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/fields/NewHolder__c.field-meta.xml
<CustomField>
    <fullName>NewHolder__c</fullName>
    <label>NewHolder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>