force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/fields/OldCharger__c.field-meta.xml
<CustomField>
    <fullName>OldCharger__c</fullName>
    <label>OldCharger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>