force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/fields/OldHolder__c.field-meta.xml
<CustomField>
    <fullName>OldHolder__c</fullName>
    <label>OldHolder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>