force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/fields/ProgramType__c.field-meta.xml
<CustomField>
    <fullName>ProgramType__c</fullName>
    <description>[KDCE] Program Type</description>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZTA</fullName>
                <label>Purchase</label>
            </value>
            <value>
                <fullName>ZTI</fullName>
                <label>Trade-in</label>
            </value>
            <value>
                <fullName>ZTU</fullName>
                <label>Upgrade</label>
            </value>
            <value>
                <fullName>ZRN</fullName>
                <label>Rental</label>
            </value>
            <value>
                <fullName>ZTAR</fullName>
                <label>Rental Purchase</label>
            </value>
            <value>
                <fullName>ZRT</fullName>
                <label>Kit to Kit</label>
            </value>
            <value>
                <fullName>ZRA</fullName>
                <isActive>false</isActive>
                <label>Replacement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>