force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/fields/RentalDeviceType__c.field-meta.xml
<CustomField>
    <fullName>RentalDeviceType__c</fullName>
    <label>Rental Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>신규</fullName>
            </value>
            <value>
                <fullName>중고</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>