force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/fields/RentalEndDate__c.field-meta.xml
<CustomField>
    <fullName>RentalEndDate__c</fullName>
    <description>[KDCE] Rental End Date</description>
    <label>Rental End Date</label>
    <type>Date</type>
</CustomField>