force-app/main/default/objects/KDCE_DropOutOfflineProgram__c/fields/Verbatim__c.field-meta.xml
<CustomField>
    <fullName>Verbatim__c</fullName>
    <label>Verbatim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>